--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+loki/assets/pixil/loki-bike.pixil
+loki/assets/png/background.png
+loki/assets/png/fire-ball.png
+loki/assets/png/loki.png
